<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_str"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_EDT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_str"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_EDT_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password_str"
            app:startIconDrawable="@drawable/ic_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/login_RDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/login_RDB_patient"
            android:layout_marginTop="10dp">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/login_RDB_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_str"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/login_RDB_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_str"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_str"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_str"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_PGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>